Apply patch from nburlett to fix the progress bar on IE6
Author: nburlett
Reviewer: exarkun
Fixes #1976

Change the styling of the progress bar so that it doesn't require CSS child selectors,
which are not supported by IE 6.

--- a/nevow/taglibrary/progressBar.css
+++ b/nevow/taglibrary/progressBar.css
@@ -5,7 +5,7 @@
     border-width: 1px;
 }
 
-.progressBar > div {
+.progressBarDiv {
     height: 15px;
     background-color: #aaaaaa;
 }
